objects/vlocity_ins__ProducerEducation__c.object
<CustomObject>
    <description>Represents education and certification requirements or achievements earned by an insurance agent/broker to maintain their ability to sell different types of insurance products. Master-detail child object of an Agent/Broker/Producer Contact.</description>
    <fields>
        <fullName>vlocity_ins__Attestation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attestation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CertificationNumber__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Certification #</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EducationType__c</fullName>
        <label>Education Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ethics</fullName>
                </value>
                <value>
                    <fullName>Life Training</fullName>
                </value>
                <value>
                    <fullName>Life Insurance</fullName>
                </value>
                <value>
                    <fullName>Property Insurance</fullName>
                </value>
                <value>
                    <fullName>Auto Insurance</fullName>
                </value>
                <value>
                    <fullName>Annuities</fullName>
                </value>
                <value>
                    <fullName>Business Insurance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__HoursApplied__c</fullName>
        <label>Hours Applied</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__HoursNeededToRenew__c</fullName>
        <label>Hours Needed to Renew</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__HoursRequired__c</fullName>
        <label>Hours Required</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Jurisdiction__c</fullName>
        <label>Jurisdiction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>ND</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProducerId__c</fullName>
        <label>Producer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Continuing Education</relationshipLabel>
        <relationshipName>ContinuingEducation</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Continuing Education</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Continuing Education</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>